--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "DELO",
-  "name": "DELO",
+  "short_name": "В ПУТЬ",
+  "name": "В ПУТЬ",
   "icons": [
     {
       "src": "favicon.ico",
