--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "lodash.debounce": "^4.0.8",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
+    "react-datepicker": "^4.20.0",
+    "react-datetime-picker": "^5.5.2",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.14.1",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "5.0.1",
@@ -61,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.15.2",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
